parser/tests/bad/expr05.st
% operands of 'comparison' operation must have the same type

const b := 1 < 2.0
